--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -29,6 +29,16 @@ h3 { @apply text-4xl; }
 h4, h5, h6 { @apply text-3xl; }
 h5, h6 { @apply italic; }
 
+#line,
+#lineContainer {
+	content: "";
+}
+
 #line {
-	transition: all 1s ease-out;
+	transition: width 999ms linear;
+}
+
+.disabled {
+	@apply text-neutral-400;
+	@apply cursor-default;
 }
