--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,4 +62,7 @@ h5, h6 {
   stroke: currentColor;
   @apply text-accent-500;
   stroke-dasharray: 1000;
-  stroke-dashoffset: 1000; }
+  stroke-dashoffset: 1000;
+  transform-box: fill-box;
+  transform-origin: center;
+  transform: rotate(-90deg); }
