--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -80,3 +80,15 @@ h5, h6 { @apply italic; }
 	transform-origin: center;
 	transform: rotate(-90deg);
 }
+
+.clear-time:not(.disabled):hover {
+	@apply text-error-700;
+}
+
+.save-time:not(.disabled):hover {
+	@apply text-success-700;
+}
+
+.add-timer {
+	border-radius: 50%;
+}
