--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,10 +46,6 @@ h5, h6 {
 \.md\:place-right {
   @apply row-start-2 col-start-1 md:row-start-1 md:col-start-2; }
 
-#circleContainer {
-  width: 30rem;
-  height: 30rem; }
-
 .circle {
   transition: 999ms;
   fill: transparent;
@@ -57,15 +53,14 @@ h5, h6 {
   stroke-linecap: round;
   stroke: currentColor;
   @apply text-neutral-600; }
-
-.circle.fill-circle {
-  stroke: currentColor;
-  @apply text-accent-500;
-  stroke-dasharray: 1000;
-  stroke-dashoffset: 1000;
-  transform-box: fill-box;
-  transform-origin: center;
-  transform: rotate(-90deg); }
+  .circle.fill-circle {
+    stroke: currentColor;
+    @apply text-accent-500;
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    transform-box: fill-box;
+    transform-origin: center;
+    transform: rotate(-90deg); }
 
 .clear-time:not(.disabled):hover {
   @apply text-error-700; }
@@ -75,3 +70,18 @@ h5, h6 {
 
 .add-timer {
   border-radius: 50%; }
+
+.tab {
+  @apply bg-neutral-600; }
+  .tab.active {
+    @apply bg-neutral-400 text-neutral-900;
+    z-index: 2; }
+  .tab:first-child.active {
+    box-shadow: 1px 0 2px -1px #5a5359; }
+  .tab:not(:first-child).active {
+    box-shadow: -1px 0 2px -1px #5a5359; }
+
+.tab-content {
+  z-index: 5;
+  top: -1px;
+  min-height: 16px; }
