--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;700&display=swap");
 :root {
   --font-size-1: 1rem;
   --font-size-2: 1.75rem;
@@ -16,11 +17,11 @@ body {
 h1 {
   @apply text-4xl md:text-5xl lg:text-6xl font-bold; }
 
-h2, h3 {
+h2 {
   @apply text-4xl md:text-5xl font-bold; }
 
 h3 {
-  @apply text-3xl md:text-4xl; }
+  @apply text-3xl md:text-4xl font-bold; }
 
 h4, h5, h6 {
   @apply text-2xl md:text-4xl; }
