--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -48,6 +48,12 @@ h5, h6 { @apply italic; }
 	@apply text-neutral-600 cursor-default;
 }
 
+@media (min-width: 768px) {
+	#main {
+		grid-template-columns: 1fr 2fr;
+	}
+}
+
 .place-top,
 \.md\:place-left {
 	@apply row-start-1 col-start-1;
@@ -79,16 +85,16 @@ h5, h6 { @apply italic; }
 	}
 }
 
+.timer {
+	min-width: 25%;
+}
+
 .clear-time:not(.disabled):hover {
 	@apply text-error-700;
 }
 
 .save-time:not(.disabled):hover {
 	@apply text-success-700;
-}
-
-.add-timer {
-	border-radius: 50%;
 }
 
 .tab {
@@ -113,7 +119,9 @@ h5, h6 { @apply italic; }
 
 #time_entries table tr {
 	display: grid;
-	grid-template-columns: .5fr 1.25fr 1.25fr 2fr 2fr;
+	grid-template-columns: 1.25fr 1.25fr 2fr 2fr .5fr;
+	align-items: center;
+	justify-content: center;
 
 	&:nth-child(even) {
 		@apply bg-tertiary-300;
