--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;700&display=swap");
+/* colors, when @apply doesn't work */
 :root {
-  --font-size-1: 1rem;
-  --font-size-2: 1.75rem;
-  --font-size-3: 2.54rem;
-  --font-size-4: 3.25rem;
-  --font-size-5: 4rem;
-  --font-size-6: 4.65rem;
-  --font-size-7: 5.25rem;
-  --font-size-8: 5.8rem; }
+  --neutral-700: rgb(101, 93, 100); }
 
+/* general HTML tags */
 a {
   @apply text-accent-600 hover:text-accent-700; }
-
-.text-light a {
-  @apply text-accent-400 hover:text-accent-500; }
+  .text-light a {
+    @apply text-accent-400 hover:text-accent-500; }
 
 h1 {
-  @apply text-4xl md:text-5xl lg:text-6xl font-bold; }
+  @apply text-4xl md:text-5xl lg:text-6xl font-bold;
+  font-variant: small-caps; }
 
 h2 {
-  @apply text-4xl md:text-5xl font-bold; }
+  @apply text-4xl md:text-5xl font-bold;
+  font-variant: small-caps; }
 
 h3 {
   @apply text-3xl md:text-4xl font-bold; }
@@ -30,21 +26,9 @@ h4, h5, h6 {
 h5, h6 {
   @apply italic; }
 
-#line,
-#lineContainer {
-  content: ""; }
-
-#line {
-  transition: width 999ms linear; }
-
+/* general classes */
 .disabled {
   @apply text-neutral-600 cursor-default; }
-
-@media (min-width: 768px) {
-  #main.clock_left {
-    grid-template-columns: 1fr 1.5fr; }
-  #main.clock_right {
-    grid-template-columns: 1.5fr 1fr; } }
 
 .place-top,
 \.md\:place-left {
@@ -53,6 +37,124 @@ h5, h6 {
 .place-bottom,
 \.md\:place-right {
   @apply row-start-2 col-start-1 md:row-start-1 md:col-start-2; }
+
+.has-tooltip {
+  position: relative; }
+  .has-tooltip:before {
+    @apply bg-neutral-700 text-light text-xs p-2 absolute inline-block;
+    content: attr(data-tooltip);
+    /* MAGIC! */
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 100%;
+    margin-bottom: 15px;
+    min-width: 300px;
+    display: none; }
+  .has-tooltip:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 100%;
+    margin-bottom: -3px;
+    border: 10px solid transparent;
+    border-top-color: var(--neutral-700);
+    display: none; }
+  .has-tooltip.tooltip-visible:before, .has-tooltip.tooltip-visible:after, .has-tooltip:hover:before, .has-tooltip:hover:after {
+    display: block; }
+  .has-tooltip.tooltip-top:before, .has-tooltip.tooltip-top:after {
+    bottom: 100%; }
+  .has-tooltip.tooltip-top:before {
+    margin-bottom: 15px; }
+  .has-tooltip.tooltip-top:after {
+    margin-bottom: -3px; }
+  .has-tooltip.tooltip-bottom:before, .has-tooltip.tooltip-bottom:after {
+    bottom: initial;
+    margin-bottom: initial;
+    top: 100%; }
+  .has-tooltip.tooltip-bottom:before {
+    margin-top: 15px; }
+  .has-tooltip.tooltip-bottom:after {
+    margin-top: -3px;
+    border-top-color: transparent;
+    border-bottom-color: var(--neutral-700); }
+  .has-tooltip.tooltip-top-left:before, .has-tooltip.tooltip-top-left:after, .has-tooltip.tooltip-top-right:before, .has-tooltip.tooltip-top-right:after, .has-tooltip.tooltip-bottom-right:before, .has-tooltip.tooltip-bottom-right:after, .has-tooltip.tooltip-bottom-left:before, .has-tooltip.tooltip-bottom-left:after {
+    left: initial;
+    margin: initial;
+    transform: translateX(0); }
+  .has-tooltip.tooltip-top-left:before, .has-tooltip.tooltip-top-left:after, .has-tooltip.tooltip-top-right:before, .has-tooltip.tooltip-top-right:after {
+    bottom: 100%; }
+  .has-tooltip.tooltip-top-left:before {
+    right: 50%;
+    margin-bottom: 15px; }
+  .has-tooltip.tooltip-top-left:after {
+    right: 75%;
+    margin-bottom: 3px;
+    border-right-color: var(--neutral-700); }
+  .has-tooltip.tooltip-top-right:before {
+    left: 50%;
+    margin-bottom: 15px; }
+  .has-tooltip.tooltip-top-right:after {
+    left: 75%;
+    margin-bottom: 3px;
+    border-left-color: var(--neutral-700); }
+  .has-tooltip.tooltip-bottom-left:before, .has-tooltip.tooltip-bottom-left:after, .has-tooltip.tooltip-bottom-right:before, .has-tooltip.tooltip-bottom-right:after {
+    top: 100%;
+    bottom: initial; }
+  .has-tooltip.tooltip-bottom-left:before {
+    right: 50%;
+    margin-top: 15px; }
+  .has-tooltip.tooltip-bottom-left:after {
+    right: 75%;
+    margin-top: 3px;
+    border-top-color: transparent;
+    border-right-color: var(--neutral-700);
+    border-bottom-color: var(--neutral-700); }
+  .has-tooltip.tooltip-bottom-right:before {
+    left: 50%;
+    margin-top: 15px; }
+  .has-tooltip.tooltip-bottom-right:after {
+    left: 75%;
+    margin-top: 3px;
+    border-top-color: transparent;
+    border-left-color: var(--neutral-700);
+    border-bottom-color: var(--neutral-700); }
+  .has-tooltip.tooltip-left:before, .has-tooltip.tooltip-left:after, .has-tooltip.tooltip-right:before, .has-tooltip.tooltip-right:after {
+    left: initial;
+    bottom: initial;
+    margin: initial;
+    top: 50%;
+    transform: translateY(-50%); }
+  .has-tooltip.tooltip-right:before, .has-tooltip.tooltip-right:after {
+    left: 100%; }
+  .has-tooltip.tooltip-right:before {
+    margin-left: 15px; }
+  .has-tooltip.tooltip-right:after {
+    margin-left: -3px;
+    border-top-color: transparent;
+    border-right-color: var(--neutral-700); }
+  .has-tooltip.tooltip-left:before, .has-tooltip.tooltip-left:after {
+    right: 100%; }
+  .has-tooltip.tooltip-left:before {
+    margin-right: 15px; }
+  .has-tooltip.tooltip-left:after {
+    margin-right: -3px;
+    border-top-color: transparent;
+    border-left-color: var(--neutral-700); }
+
+/* SECONDS COUNTERS */
+#line,
+#lineContainer {
+  content: ""; }
+
+#line {
+  transition: width 999ms linear; }
+
+@media (min-width: 768px) {
+  #main.clock_left {
+    grid-template-columns: 1fr 1.5fr; }
+  #main.clock_right {
+    grid-template-columns: 1.5fr 1fr; } }
 
 .circle {
   transition: 999ms;
@@ -70,15 +172,7 @@ h5, h6 {
     transform-origin: center;
     transform: rotate(-90deg); }
 
-.timer {
-  min-width: 25%; }
-
-.clear-time:not(.disabled):hover {
-  @apply text-error-700; }
-
-.save-time:not(.disabled):hover {
-  @apply text-success-700; }
-
+/* TABS */
 .tab.active {
   @apply text-neutral-900;
   z-index: 2; }
@@ -94,6 +188,17 @@ h5, h6 {
   top: -1px;
   min-height: 16px; }
 
+/* TIMERS */
+.timer {
+  min-width: 25%; }
+
+.clear-time:not(.disabled):hover {
+  @apply text-error-700; }
+
+.save-time:not(.disabled):hover {
+  @apply text-success-700; }
+
+/* TIME ENTRIES */
 #time_entries table tr {
   display: grid;
   grid-template-columns: 1.25fr 1.25fr 2fr 2fr .5fr;
