--- a/src/css/a.tailwind.css
+++ b/src/css/a.tailwind.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Anonymous+Pro:wght@400&family=Spartan:wght@400;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
