--- a/src/css/a.tailwind.scss
+++ b/src/css/a.tailwind.scss
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Anonymous+Pro:wght@400&family=Spartan:wght@400;900&display=swap');
